# AgiTerminal

./: .env.example  .gitignore  AgiTerminal.bundle  CONTRIBUTING.md  EDUCATIONAL_JOURNEY.md  ETHICS.md  GLOSSARY.md  IMPLEMENTATION.md  LICENSE  README.md  STRUCTURE.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
.planning/: AGITERMINAL_ROADMAP.md
.planning/ARCHIVE/: PROJECT.md  README.md  REQUIREMENTS.md  ROADMAP.md  STATE.md  config.json
collections/anthropic/: README.md
collections/docs/: EXTRACTION.md  README.md
collections/google/: README.md
collections/kimi/: README.md  base-chat.md  ok-computer.md
collections/meta/: README.md
collections/openai/: README.md
deep-dives/: metaphor-encoding.md
docs/: CONTRIBUTING.md  GETTING_STARTED.md
docs/architecture/: IMPLEMENTATION.md  METHODOLOGY.md  OVERVIEW.md
docs/meta/: EDUCATIONAL_JOURNEY.md  INDEX.md
examples/: analyze_prompt.py  build_custom_prompt.py  compare_providers.py  educational_analysis.py
prompts/base/: BASE.md
prompts/behavioral-modes/: ACADEMIC.md  EMPATH.md  INSTRUCTIVE.md
prompts/constraint-testing/: LEVEL_0.md  LEVEL_1.md  LEVEL_3.md  LEVEL_4.md  README.md
prompts/examples/: SYNTHETIC_TEST_CASES.md
prompts/modes/: ALARMIST.md  README.md
prompts/system/: BASE.md
prompts/testing/: LEVEL_2.md
src/: __init__.py  cli.py
src/agiterminal/: __init__.py  __main__.py  _paths.py  analyzer.py  benchmark.py  cli.py  comparator.py  installer.py  prompt_builder.py  validator.py
system-prompts/: CONTRIBUTING.md  ETHICS.md  README.md
system-prompts/anthropic/: README.md
system-prompts/google/: README.md
system-prompts/kimi/: docs.md  sheets.md  slides.md  websites.md
system-prompts/openai/: README.md
tests/: __init__.py  test_analyzer.py  test_comparator.py  test_installer.py  test_prompt_builder.py
