[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "agiterminal"
version = "0.1.0"
description = "Educational Research Platform for AI System Prompt Analysis"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
authors = [
    {name = "AgiTerminal Project"},
]
keywords = [
    "ai",
    "llm",
    "system-prompt",
    "prompt-engineering",
    "education",
    "research",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Education",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Education",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "click>=8.0",
    "pyyaml>=6.0",
    "pandas>=1.5",
    "matplotlib>=3.5",
    "aiohttp>=3.8",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
    "pytest-cov>=4.0",
    "black>=23.0",
    "flake8>=6.0",
    "mypy>=1.0",
]
docs = [
    "mkdocs>=1.5",
    "mkdocs-material>=9.0",
]

[project.scripts]
agiterminal = "agiterminal.cli:cli"

[project.urls]
Homepage = "https://github.com/Faddegarcia/AgiTerminal"
Documentation = "https://github.com/Faddegarcia/AgiTerminal#readme"
Repository = "https://github.com/Faddegarcia/AgiTerminal"
Issues = "https://github.com/Faddegarcia/AgiTerminal/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/agiterminal"]

[tool.black]
line-length = 100
target-version = ['py39']

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
asyncio_mode = "auto"

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
